Removed cache from gitignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,15 +1,11 @@
 # OSX #
 .DS_Store
 
-# Byte-compiled / optimized / DLL files #
-__pycache__/
-*.py[cod]
-*$py.class
 
 # Django #
 *.log
 db.sqlite3
-media
+media/*
 
 # Virtual environment
 .venv
